Version: 1.0.6
Date: 10. 04. 2021
  Improvements:
    - Added light artillery that shoots launcher ammo that is modeled after an artillery turret with remote
  Migration:
    - Fuel emission multipliers moved to Rampant Industry
  Tweaks:
    - Shotgun turret range reduced by 29%
    - Reverted nuclear cell to vanilla stack size
    - Capsule turret damage bonus reduced by 50%

---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 28. 03. 2021
  Bugfixes:
    - Fixed nuclear generator not working in spidertron

---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 28. 02. 2021
  Bugfixes:
    - Fixed air filter entity description
    - Fixed speed capsule effect description

---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 07. 02. 2021
  Bugfixes:
    - Added increased healing capsule to 300 health recovery
    - Fixed throw/consume tooltip missing on capsules and grenades
    - Fixed missing throw sound for capsules

---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 07. 12. 2020
  Bugfixes:
    - Added Gate technology prerequisite to regenerating and reinforced walls and gates technology
    - Fixed hide vanilla technologies not correctly disabling

---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 28. 11. 2020
  Improvements:
    - Added settings to toggle all equipment, vehicles, rifle turret, and additional ammo types on and off
    - Added setting to use vanilla damage technologies
    - Updated for factorio 1.1
  Bugfixes:
    - Fixed technology icons
    - Fixed shield build position
  Warning:
    - Moved oil generator, advanced lab, advanced accumulator, and large storage tank to another mod
