@@ -435,7 +435,6 @@ rampant-arsenal-enableNuclearGeneratorEquipmentConsuming=Nuclear Generator Equip
 rampant-arsenal-useInfiniteTechnologies=Enable Infinite Technologies
 rampant-arsenal-enableAmmoTypes=Enable Additional Ammo Types
 rampant-arsenal-enableVehicle=Enable Vehicles
-rampant-arsenal-enableVehicleNuclearFuelStackSize=Nuclear Fuel Stacks to 10 (Vehicles must be enabled)
 rampant-arsenal-enableRifleTurret=Enable Rifle Turret
 rampant-arsenal-enableEquipment=Enable Equipment
 
@@ -454,7 +453,6 @@ rampant-arsenal-hideVanillaDamageTechnologies=The vanilla damage technologies ha
 rampant-arsenal-useInfiniteTechnologies=Enables the infinite technologies that require space science
 rampant-arsenal-enableAmmoTypes=Enable Additional Ammo Types
 rampant-arsenal-enableVehicle=Enable Vehicles
-rampant-arsenal-enableVehicleNuclearFuelStackSize=Nuclear Fuel Stacks to 10 (Vehicles must be enabled)
 rampant-arsenal-enableRifleTurret=Enable Rifle Turret
 rampant-arsenal-enableEquipment=Enable Equipment
 
