@@ -203,9 +203,11 @@ function vehicles.enable()
             collisionBox = {{-1.5, -2.5}, {1.2, 1.8}},
             selectionBox = {{-1.7, -2.7}, {1.4, 2}},
             drawingBox = {{-3.4, -3.4}, {3.4, 2.8}},
-            brakingPower = "1MW",
+            brakingPower = "20MW",
             equipmentGrid = advTankGrid,
+            friction = 0.0022,
             immuneToTrees = true,
+            -- rotationSpeed = 0.0030,
             weapons = { advancedTankMachineGun, advancedTankCannon, advancedTankFlamethrower, advancedTankLauncher},
             tint = { r = 0.85, g = 0.75, b = 0.75, a = 1 },
             energySource = {
@@ -438,9 +440,11 @@ function vehicles.enable()
             weapons = { nuclearTankMachineGun, nuclearTankCannon, nuclearTankFlamethrower, nuclearTankLauncher, nuclearTankRocket},
             immuneToTrees = true,
             health = 5000,
-            brakingForce = "1MW",
-            consumption = "3.0MW",
+            brakingForce = "720MW",
+            consumption = "30.0MW",
             weight = 40000,
+            friction = 0.02,
+            rotationSpeed = 0.0027,
             inventorySize = 180,
             tint = { r = 0.75, g = 0.85, b = 0.75, a = 1 },
             energySource = {
@@ -605,7 +609,7 @@ function vehicles.enable()
             friction = 0.003,
             weapons = {advancedCarMachineGun, advancedCarShotgun},
             effectivity = 0.80,
-            brakingForce = "400kW",
+            brakingForce = "1.2MW",
             consumption = "1.0MW",
             weight = 1600,
             inventorySize = 130,
@@ -760,8 +764,8 @@ function vehicles.enable()
             effectivity = 0.85,
             friction = 0.004,
             weapons = {nuclearCarMachineGun, nuclearCarShotgun, nuclearCarLauncher},
-            brakingForce = "600kW",
-            consumption = "1.5MW",
+            brakingForce = "4MW",
+            consumption = "10MW",
             weight = 2500,
             inventorySize = 200,
             icon = "__RampantArsenal__/graphics/icons/nuclear-car.png",
@@ -847,7 +851,7 @@ function vehicles.enable()
             equipmentGrid = nuclearTrainGrid,
             health = 2400,
             brakingForce = 15,
-            consumption = "3.0MW",
+            consumption = "10.0MW",
             maxSpeed = 1.3,
             maxReverse = 0.7,
             maxPower = "1MW",
