@@ -20,15 +20,6 @@ data:extend({
 
         {
             type = "bool-setting",
-            name = "rampant-arsenal-enableVehicleNuclearFuelStackSize",
-            setting_type = 'startup',
-            default_value = true,
-            order = "a[projectile]-a[collide]",
-            per_user = false
-        },
-
-        {
-            type = "bool-setting",
             name = "rampant-arsenal-enableAmmoTypes",
             setting_type = 'startup',
             default_value = true,
